fix Select cursor display even when not searchable on Firefox only

--- a/packages/@mantine/core/src/components/Input/Input.module.css
+++ b/packages/@mantine/core/src/components/Input/Input.module.css
@@ -212,6 +212,9 @@
     background-color: var(--input-disabled-bg);
     color: var(--input-disabled-color);
   }
+  &:read-only{
+      caret-color: transparent;
+  }
 }
 
 .section {
